--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,7 @@
         }
     ],
     "require": {
-        "microsoft/kiota-abstractions": "^1.4",
-        "symfony/http-client": "^7.1",
-        "nyholm/psr7": "^1.8",
-        "microsoft/kiota-http-guzzle": "^1.3",
-        "microsoft/kiota-authentication-phpleague": "^1.2",
-        "microsoft/kiota-serialization-json": "^1.3",
-        "microsoft/kiota-serialization-text": "^1.1"
+        "adnanhussainturki/microsoft-api-php": ">=0.04"
     },
     "config": {
         "allow-plugins": {
